wasm/fasta_extract_pattern_coords_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_cn_csuy9/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/c7f41cf6816334f864fb46384f7b91980dea99d8.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/c7f41cf6816334f864fb46384f7b91980dea99d8.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/421496c45ba32edc58d3377a69e0cc69930b2748.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/421496c45ba32edc58d3377a69e0cc69930b2748.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/3dab485766ae05ce954dcf0414504d2e6273c0b7.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/3dab485766ae05ce954dcf0414504d2e6273c0b7.json" for subsequent builds)
cache:INFO:  - ok
